--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,28 +20,7 @@ apply plugin: 'android-apt'
 apply plugin: 'io.fabric'
 
 
-android {
-    dataBinding {
-        enabled = true
-    }
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
-
-    defaultConfig {
-        applicationId "com.cmmakerclub.iot.cmmciotswitch"
-        minSdkVersion 16
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-}
-
+def UA = "\"UA-53466330-4\"";
 def AAVersion = '3.3.2'
 
 dependencies {
@@ -51,6 +30,35 @@ dependencies {
         transitive = true;
     }
 }
+
+android {
+    dataBinding {
+        enabled = true
+    }
+    compileSdkVersion 23
+    buildToolsVersion '23.0.2'
+
+    defaultConfig {
+        applicationId "com.cmmakerclub.iot.cmmcswitch"
+        minSdkVersion 16
+        targetSdkVersion 23
+        versionCode 1
+        versionName "1.0"
+        buildConfigField "String", "GOOGLE_ANALYTICS", "$UA"
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    lintOptions {
+        disable 'InvalidPackage'
+    }
+}
+
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -63,24 +71,20 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.scottyab:secure-preferences-lib:0.1.3'
-    compile 'com.github.satyan:sugar:1.3.1'
-
+//    compile 'com.github.satyan:sugar:1.3.1'
     compile 'com.google.code.gson:gson:2.4'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.wdullaer:materialdatetimepicker:1.5.4'
+    compile 'com.squareup:otto:1.3.8'
+    compile 'com.parse.bolts:bolts-android:1.2.1'
+    compile 'com.google.android.gms:play-services-analytics:8.3.0'
 }
+
 
 apt {
     arguments {
+        resourcePackageName android.defaultConfig.applicationId
         androidManifestFile variant.outputs[0]?.processResources?.manifestFile
-        // if you have multiple outputs (when using splits), you may want to have other index than 0
-
-        // you should set your package name here if you are using different application IDs
-        // resourcePackageName "your.package.name"
-
-        // You can set optional annotation processing options here, like these commented options:
-        // logLevel 'INFO'
-        // logFile '/var/log/aa.log'
     }
-}
-dependencies {
-    compile 'com.android.support:design:23.+'
 }
