--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cmmakerclub.iot.cmmciotswitch">
+    package="com.cmmakerclub.iot.cmmcswitch">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name="com.cmmakerclub.iot.cmmcswitch.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name="com.cmmakerclub.iot.cmmcswitch.MainActivity"
+            android:screenOrientation="portrait">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,9 +27,10 @@
             android:value="96301155506cd35d841ea153657978e3979ee19a" />
 
         <activity
-            android:name=".ConfigurationActivity"
+            android:screenOrientation="portrait"
+            android:name="com.cmmakerclub.iot.cmmcswitch.ConfigurationActivity"
             android:label="@string/title_activity_configuration"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
