--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,11 @@ android {
     buildToolsVersion '23.0.2'
 
     defaultConfig {
-        applicationId "com.cmmakerclub.iot.cmmcswitch"
+        applicationId "com.cmmakerclub.iot.cmmciotswitch"
         minSdkVersion 16
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 22
+        versionCode 6
+        versionName "0.1alpha"
         buildConfigField "String", "GOOGLE_ANALYTICS", "$UA"
     }
     buildTypes {
