--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:label="@string/app_name"
             android:name="com.cmmakerclub.iot.cmmciotswitch.activity.MainActivity"
             android:screenOrientation="portrait">
 
@@ -40,7 +41,8 @@
             android:name="com.cmmakerclub.iot.cmmciotswitch.activity.ConfigurationActivity"
             android:label="@string/title_activity_configuration"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            />
     </application>
 
 </manifest>
